--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,20 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
+      <groupId>hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
-      <version>1.1</version>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jmock</groupId>
+      <artifactId>jmock</artifactId>
+      <version>2.6.0-RC2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jmock</groupId>
+      <artifactId>jmock-junit4</artifactId>
+      <version>2.6.0-RC2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -92,4 +103,10 @@
       </plugin>
     </plugins>
   </reporting>
+  <repositories>
+    <repository>
+      <id>xwiki</id>
+      <url>http://maven.xwiki.org/externals</url>
+    </repository>
+  </repositories>
 </project>
