--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.2</version>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3.RC2</version>
     </dependency>
     <dependency>
       <groupId>org.jmock</groupId>
