--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,29 @@
   <url>https://github.com/ClausPolanka/appkata-csv</url>
   <build>
     <plugins>
+	    <plugin>
+		    <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.2</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+	        <archive>
+            <manifest>
+              <mainClass>appkata.Main</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+		     <executions>
+          <execution>
+            <id>make-assembly</id>
+	          <phase>package</phase>
+	          <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+	    </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
